done with first pass

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -12,10 +12,18 @@ h6 {
   font-weight: 500;
 }
 
+a {
+  color: var(--processing-dark);
+}
+
 p {
   font-size: 18px;
 }
 
 h2 {
   font-size: 32px;
+}
+
+h3 {
+  font-size: 25px;
 }
