--- a/src/styles/pages/index.module.css
+++ b/src/styles/pages/index.module.css
@@ -40,6 +40,25 @@
   flex-basis: calc(var(--col9));
 }
 
+.partners {
+  margin-top: 40px;
+  list-style-type: none;
+  padding: 0;
+  opacity: 0.5;
+
+  & li {
+    display: flex;
+    max-width: 500px;
+    margin-bottom: 20px;
+  }
+
+  & img {
+    width: 50px;
+    height: auto;
+    margin-right: 15px;
+  }
+}
+
 .info {
   flex-basis: calc(var(--col4));
   color: var(--processing-dark);
