--- a/src/styles/pages/index.module.css
+++ b/src/styles/pages/index.module.css
@@ -44,12 +44,17 @@
   margin-top: 40px;
   list-style-type: none;
   padding: 0;
-  opacity: 0.5;
+  opacity: 0.6;
 
+  & li {
+    margin-bottom: 30px;
+  }
+}
+
+.partnerSplit {
   & li {
     display: flex;
     max-width: 500px;
-    margin-bottom: 30px;
   }
 
   & img {
@@ -57,6 +62,32 @@
     height: auto;
     margin-right: 15px;
   }
+}
+
+.partnerLogos {
+  display: flex;
+  align-items: center;
+
+  & a {
+    margin-right: 30px;
+  }
+
+  & img {
+    max-height: 100px;
+    max-width: 100%;
+  }
+}
+
+a.kp img {
+  max-height: 70px;
+}
+
+a.dmjx img {
+  max-height: 80px;
+}
+
+a.ida img {
+  max-height: 90px;
 }
 
 .info {
@@ -75,6 +106,10 @@
 .text {
   margin-left: calc(var(--col3) + var(--gutter));
   flex-basis: var(--col8);
+
+  & img {
+    max-width: 100%;
+  }
 
   & ul {
     list-style-type: none;
